...
    <string name="add_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">Coroutine-test</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your task here.</string>
    <string name="empty_task_message">Tasks cannot be empty</string>
...
    <string name="statistics_completed_tasks">Completed tasks: %.1f%%</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
...
